tests/paczka1/small_fuzzy/54002777.err
Error in line 1: BOm A792 92,5
Error in line 3: BOm A424 33,4
Error in line 7: BOm S898 97,4
